# helix-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.ja.md  README.md  README_ja.md  SECURITY.md  benchmark_results.json  demo.tape  main.py  pyproject.toml  server.py  validate_path.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
config/: environment_manifest.yaml
docs/: agent_architecture_research.md  azure-github-actions-oidc-plan.md  branch-protection-plan.md  demo_output.txt  devsecops-readiness-report.md  github-security-settings.md  github_launch_kit.md
docs/articles/: devto_article.md  launch_posts_v0.11.0.md  reddit_claudeai.md  reddit_localllama.md  token_drain_benchmark.md  x_thread.md  (+2 more)
scripts/: _check_tasks.ps1  _register_ft_advisor_task.ps1  _register_guard_task.ps1  _register_timeout_task.ps1  _stop_dashboard.ps1  _update_audit_task.ps1  anomaly_dispatcher.py  assistant_cli.py  assistant_daemon.py  assistant_queue.py  backup_to_nas.py  benchmark_models.py  browser_ai_orchestrator.py  check_context_usage.py  claude_usage_scraper.py  cmem_bridge_mac.py  cmem_qdrant_bridge.py  context_budget.py  contradiction_detector.py  conversation_logger.py  corp_health.py  critical_files_guard.py  critical_guard_mac.py  dashboard_server.py  dept_dataset_builder.py  dept_feed_bridge.py  dept_ft_advisor.py  env_self_heal.py  escalation.py  failover_orchestrator.py  health_server.py  helix_overview.py  helix_status.py  hw_monitor.py  init_dept_collections.py  integrity_check.py  integrity_check_mac.py  memory_health.py  memory_lightrag_feeder.py  migrate_sparse.py  (+26 more)
src/: __init__.py  agent.py  agent_browser_session.py  agent_loader.py  benchmark.py  builtin_tools.py  code_review.py  computer_use.py  evolving_memory.py  gpu_detect.py  ja_input.py  langfuse_tracing.py  mcp_security.py  ollama_client.py  pathguard.py  provider_runtime.py  qdrant_memory.py  react_loop.py  rights_registry.py  router.py  token_saver.py  tools.py  tracing.py  vision.py  workflow_dag.py
tests/: test_agent.py  test_agent_browser_session.py  test_benchmark.py  test_builtin_tools.py  test_code_review.py  test_evolving_memory.py  test_intel_manager.py  test_ja_input.py  test_mcp_security_integration.py  test_ollama_client.py  test_phase1_features.py  test_phase2_features.py  test_phase3_features.py  test_phase4_features.py  test_react_loop.py  test_rights_registry.py  test_router.py  test_sparse_vector.py  test_token_saver.py
(+5 files in other folders)
