[project]
name = "helix-agent"
version = "0.5.0"
description = "Claude Code extension MCP server for multi-provider agents including Ollama, Codex, and OpenAI-compatible APIs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "tsunamayo7" }]
keywords = ["mcp", "agent", "llm", "ollama", "codex", "openai-compatible", "claude-code"]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
memory = ["qdrant-client>=1.12"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
